fixed dark mode background on mobile

--- a/styles.css
+++ b/styles.css
@@ -70,6 +70,7 @@ textarea, input {
 
 @media (prefers-color-scheme: dark) {
 	body {
+		background-image: none;
 		background-color: #000;
 	}
 
